--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background: #f4f4f4;
+  font-family: 'Noto Serif', serif;
+  color: #555;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header h2{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background: #333;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+header a{
+  text-decoration: none;
+  color: white;
+}
+
+#nav-bar ul {
+  padding-right: 50px;
+}
+
+
+footer {
+  margin-top: 30px;
+  margin-bottom: 25px;
+}
+
+footer h6{
+  font-weight: 800;
+}
+
+/* MARS ROVER */
+#title{
+  padding-bottom: 10px;
+}
+
+#img {
+  width: 1152px;
+  height: 432px;
+}
+
+@media(max-width: 850px){
+  #img-container img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
+/* POTD */
+#picture{
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+@media(max-width: 850px){
+  #picture img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* NOT FOUND */
+#error-container{
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+}
+
+#error-container a{
+  width: 200px;
+  background: #2A2F3D;
+}
+
+@media(max-width: 600px){
+  #error-container{
+    display: block;
+  }
 }
