--- a/src/index.css
+++ b/src/index.css
@@ -69,9 +69,23 @@ footer h6{
 #picture{
   margin-top: 20px;
   margin-bottom: 50px;
+  margin: 30px auto;
 }
 
-@media(max-width: 850px){
+#picture iframe{
+  width: 70vw;
+  height: 70vh;
+}
+
+@media screen and (max-width: 850px){
+  #picture {
+    max-width: 100vw;
+    height: 400px;
+  }
+  #picture iframe{
+    width: 100%;
+    height: 100%;
+  }
   #picture img{
     width: 100%;
     height: 100%;
