--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ footer h6{
   height: 432px;
 }
 
-@media(max-width: 850px){
+@media screen and (max-width: 850px){
   #img-container img{
     width: 100%;
     height: 100%;
@@ -69,23 +69,9 @@ footer h6{
 #picture{
   margin-top: 20px;
   margin-bottom: 50px;
-  margin: 30px auto;
-}
-
-#picture iframe{
-  width: 70vw;
-  height: 70vh;
 }
 
 @media screen and (max-width: 850px){
-  #picture {
-    max-width: 100vw;
-    height: 400px;
-  }
-  #picture iframe{
-    width: 100%;
-    height: 100%;
-  }
   #picture img{
     width: 100%;
     height: 100%;
@@ -106,7 +92,7 @@ footer h6{
   background: #2A2F3D;
 }
 
-@media(max-width: 600px){
+@media screen and (max-width: 600px){
   #error-container{
     display: block;
   }
